# transpnerf

./: .gitignore  README.md  index.html  pyproject.toml
data/synthetic-blender-dataset/: coffee.blend  wine.blend
scripts/: blender_dataset.py  create_normal_real_data.py  depth_extract_npgz.py  get_eval_results.py  train_and_eval.sh  train_and_eval_each.sh  train_and_eval_master.sh
transpnerf/: depth_normal_dataset.py  transpnerf_config.py  transpnerf_datamanager.py  transpnerf_dataparser.py  transpnerf_dataparser_blender.py  transpnerf_dataparser_nerfstudio.py  transpnerf_field.py  transpnerf_model.py  transpnerf_pipeline.py
